--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body {
 #screen2 h3 {
     margin-bottom: 50px;
     margin-top: 40px;
-    font-size: 1.1em;
+    font-size: 1.2em;
     font-weight: 400;
     color: #5d5c5a;
 }
@@ -163,11 +163,11 @@ body {
 }
 
 .tile-image-1 {
-    background-image: url('images/messy-img.jpg'); 
+    background-image: url('images/frame-8.jpg'); 
 }
 
 .tile-image-2 {
-    background-image: url('images/style-tiles-img.jpg'); 
+    background-image: url('images/frame-9.jpg'); 
 }
 
 .bottom-nav {
@@ -176,22 +176,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
     background-color: #f7f3ed; 
     padding-bottom: 10px;
     box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.05);
 }
 
-.nav-dot {
+.nav-icon {
     width: 40px;
     height: 40px;
-    background-color: #ccc;
-    border-radius: 50%;
+    /* background-color: #ccc; */
+    /* border-radius: 50%; */
     transition: background-color 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.nav-dot.active {
-    background-color: #5d5c5a; 
+.icon {
+    width: 24px;
+    height: auto;
 }
+
+
 
 
