--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,19 @@ body {
 .color-palette {
     display: flex;
     gap: 10px;
+
+    .color-box {
+        width: 65px;
+        height: 65px;
+        border-radius: 50%;
+        font-size: 0.5em;
+        position: relative;
+
+        .hex-code {
+            position: relative;
+            top: 40px;  
+        }
+    }
 }
 
 .dot {
@@ -255,6 +268,9 @@ body {
 .box {
     background-color: #e2e2df;
     border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .box.tall-left {
@@ -262,7 +278,6 @@ body {
     grid-row: 1;
     height: 250px;
     width: 180px;
-    background-color: purple;
 }
 
 .box.empty {
@@ -278,14 +293,12 @@ body {
 .box.square-mid-left {
     grid-column: 1;
     grid-row: 2;
-    background-color: #2e7d32;
     aspect-ratio: 1 / 1;
 }
 
 .box.square-mid-right {
     grid-column: 2;
     grid-row: 2;
-    background-color: #90caf9;
     aspect-ratio: 1 / 1;
     position: relative;
     left: -42px;
@@ -295,7 +308,6 @@ body {
     grid-column: span 2;
     height: 120px;
     width: 87%;
-    background-color: purple;
 }
 
 /* screen-4 */
@@ -325,6 +337,9 @@ body {
     width: 100%;
     height: 200px;
     background-color: #e0e0de;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .lorem-select-v2 {
@@ -473,3 +488,41 @@ body {
     object-fit: cover;
     display: block;
 }
+
+/* font-pick styles */
+.fontpick{ 
+    position:relative; 
+    display:inline-block; 
+    margin-bottom: 25px;
+}
+  .fontpick__trigger{
+    display:inline;         
+    cursor:pointer;
+    user-select:none;
+    font: inherit;
+    /* font-size: 30px; */
+    /* filter: drop-shadow(2px 4px 6px black); */
+  }
+  .fontpick__trigger:focus{ outline:none; }
+  .fontpick__trigger:focus-visible{
+    outline: 2px solid currentColor;
+    outline-offset: 4px;
+    border-radius: 6px;
+  }
+
+  .fontpick__menu{
+    position:absolute; top:calc(100% + 8px); left:0;
+    list-style:none; margin:0; padding:6px;
+    background:#fff; border:1px solid rgba(0,0,0,.1);
+    border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,.15);
+    display:none; z-index:999;
+    min-width: 150px;
+  }
+  .fontpick.open .fontpick__menu{ display:block; }
+
+  .fontpick__menu li{
+    padding:10px; border-radius:10px; cursor:pointer; white-space:nowrap;
+  }
+  .fontpick__menu li:hover{ background:rgba(0,0,0,.06); }
+
+ 
